# ESP

./: .gitignore  ESP_Radar_Migration_Completeness_Audit.md  api_boundary_v1_findings.md  api_boundary_v1_task_plan.md  audio_memory_audit.md  automation_decision_audit.md  c5-resource-rebalance-report.md  c5-startup-stack-audit.md  c5_memory_rebalance_report.md  c5_n16r8_complete_memory_audit.md  c5_startup_stack_root_cause.md  c5_voice_stability_fix_report.md  esp-home-ai-voice-tool-chain-audit.md  findings.md  lcd_admission_alignment_report.md  lcd_admission_dynamic_requirement_report.md  lcd_lvgl_handoff_audit_report.md  lcd_lvgl_psram_pool_fix_report.md  lcd_lvgl_span_fix_report.md  lcd_lvgl_theme_fix_audit.md  lcd_memory_layout_fix_report.md  notes.md  progress.md  radar-chain-audit-report.md  radar-s3-stability-audit-2026-07-17.md  radar_uart_timeout_recovery_fix.md  runtime_protection_audit.md  task_lifecycle_audit.md  task_plan.md  voice_resource_state_audit.md  wake_prompt_audit.md  weather-context-architecture-audit.md
ESPC51/components/lcd/: CMakeLists.txt  lcd_board_profile.h  lcd_fault_injection.c  lcd_fault_injection.h  lcd_service.h  lcd_touch.c
ESPC51/components/lcd/tests/: test_lcd_fault_injection.c
ESPC52/components/Middlewares/: CMakeLists.txt
ESPC52/components/Middlewares/app_orchestrator/: app_orchestrator.c
ESPC52/components/Middlewares/display_placeholder/: screen_server_client.c  screen_service.h
ESPC52/components/Middlewares/home_ai/: c5_voice_session_client.c
ESPC52/components/Middlewares/memory/: c5_memory.c  c5_memory.h
ESPC52/components/Middlewares/mic/: mic_adc_test.c  mic_adc_test.h  mic_vad.c  mic_vad.h
ESPC52/components/Middlewares/radar_ble/: radar_ble_runtime.c  radar_ble_transport.c
ESPC52/components/Middlewares/radar_domain/: radar_buffer.c  radar_home_snapshot_client.h  radar_memory_manager.c  radar_memory_manager.h  radar_resource_adapter.h  radar_upload_queue.c  radar_upload_queue.h  radar_worker.h
ESPC52/components/Middlewares/runtime/: app_runtime.c  app_runtime.h  c5_backpressure_controller.c  c5_backpressure_controller.h  c5_event_bus.h  c5_resource_manager.c  c5_runtime_workers.c
ESPC52/components/Middlewares/server_comm/: CMakeLists.txt  gateway_link.c  gateway_link.h  server_comm_config.h  server_comm_http.c  server_comm_http.h  server_comm_types.h
ESPC52/components/Middlewares/server_voice/: server_voice_client.c  server_voice_client.h  server_voice_protocol.h
ESPC52/components/Middlewares/speaker/: speaker_player.c  speaker_player.h
ESPC52/components/Middlewares/terminal_config/: terminal_config.c  terminal_config.h
ESPC52/components/Middlewares/voice_domain/: voice_chain.c  voice_chain.h
ESPC52/components/Middlewares/voice_transport/: c5_audio_transport.c  c5_audio_transport.h
ESPC52/components/Middlewares/wake/: local_wake_word.c  local_wake_word.h  wake_prompt_cache.c
ESPC52/components/Middlewares/wifi/: wifi_manager.c  wifi_manager.h
ESPS3/components/Middlewares/: CMakeLists.txt  habit_event_reporter.c  habit_event_reporter.h  habit_rule_adapter.c  habit_rule_adapter.h
ESPS3/components/Middlewares/audio_wake_gateway/: audio_wake_gateway.c  audio_wake_gateway.h
ESPS3/components/Middlewares/bme_cache_manager/: bme_cache_manager.c
ESPS3/components/Middlewares/child_registry/: child_registry.c  child_registry.h
ESPS3/components/Middlewares/command_router/: command_ack_policy.c  command_ack_policy.h  command_router.c  command_router.h
ESPS3/components/Middlewares/csi_fusion/: csi_fusion.c  csi_fusion.h
ESPS3/components/Middlewares/csi_placeholder_gateway/: csi_placeholder_gateway.c  csi_placeholder_gateway.h
ESPS3/components/Middlewares/device_stream_gateway/: device_stream_gateway.c  device_stream_gateway.h
ESPS3/components/Middlewares/environment_alarm_adapter/: environment_alarm_adapter.c  environment_alarm_sequence.c  environment_alarm_sequence.h
ESPS3/components/Middlewares/environment_alarm_reporter/: environment_alarm_delivery.c  environment_alarm_reporter.c  environment_alarm_reporter.h
ESPS3/components/Middlewares/gateway_config/: gateway_config.c  gateway_config.h  gateway_wifi_credentials.h
ESPS3/components/Middlewares/gateway_event_reporter/: gateway_event_reporter.c  gateway_event_reporter.h
ESPS3/components/Middlewares/gateway_orchestrator/: gateway_orchestrator.c  gateway_orchestrator.h
ESPS3/components/Middlewares/gateway_wifi/: gateway_wifi.c  gateway_wifi.h
ESPS3/components/Middlewares/home_ai/: home_ai_config_store.c  home_ai_config_store.h  home_ai_emergency_coordinator.c  home_ai_emergency_coordinator.h  home_ai_event_reporter.c  home_ai_event_reporter.h  home_ai_history_store.c  home_ai_history_store.h  home_ai_local_voice_command.c  home_ai_local_voice_command.h  home_ai_room_state.c  home_ai_room_state.h  home_ai_rule_engine.c  home_ai_rule_engine.h  home_ai_runtime.c  home_ai_runtime.h  home_ai_user_override.c  home_ai_user_override.h  home_ai_virtual_device.c  home_ai_virtual_device.h  home_ai_voice_router.c  home_ai_voice_router.h  home_ai_voice_session.c  home_ai_voice_session.h  home_ai_weather_context.c  home_ai_weather_context.h
ESPS3/components/Middlewares/local_http_server/: home_ai_local_handler.c  home_ai_local_handler.h  local_http_server.c  local_http_server.h  radar_local_handler.c  radar_local_handler.h
ESPS3/components/Middlewares/network_replay_worker/: network_replay_worker.c  network_replay_worker.h
ESPS3/components/Middlewares/network_worker/: network_worker.c  network_worker.h
ESPS3/components/Middlewares/offline_policy/: offline_policy.c
ESPS3/components/Middlewares/protocol_adapter/: protocol_adapter.c  protocol_adapter.h
ESPS3/components/Middlewares/radar_domain/: radar_diagnostics.c  radar_gateway_ingest.c  radar_home_snapshot.c  radar_ingest.c  radar_local_adapter.c  radar_log_manager.c  radar_person_continuity.c  (+5 more)
ESPS3/components/environment_alarm_engine/: CMakeLists.txt
ESPS3/components/radar_ld2450/: CMakeLists.txt  ld2450_config.c  ld2450_uart.c  radar_presence.c  radar_service.c  radar_state_codec.c
(+2335 files in other folders)
